--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "mode": "auto",
       "program": "${fileDirname}",
       "args": [
-        "testdata/pokemon_data.csv"
+        "testdata/pokemon_data_100.csv"
       ]
     }
   ]
